# scikit-fair

./: .gitignore  LICENSE  README.md  pyproject.toml
api/preprocessing/: index.html
docs_project/: mkdocs.yml
docs_project/docs/: index.md  installation.md
docs_project/docs/api/: audit.md  comparison.md  datasets.md  experimentation.md  metrics.md  preprocessing.md
docs_project/docs/user_guide/: audit.md  comparison.md  datasets.md  experimentation.md  metrics.md  preprocessing.md  quickstart.md
docs_project/site/: 404.html  index.html  objects.inv  search.html
docs_project/site/api/datasets/: index.html
docs_project/site/api/metrics/: index.html
docs_project/site/api/preprocessing/: index.html
docs_project/site/installation/: index.html
docs_project/site/search/: search_index.json
docs_project/site/user_guide/datasets/: index.html
docs_project/site/user_guide/metrics/: index.html
docs_project/site/user_guide/quickstart/: index.html
examples/: 01_datasets.ipynb  02_methods.ipynb  03_audit.ipynb  04_comparison.ipynb  05_experiment.ipynb  05a_experiment_config.ipynb  05b_custom_datasets.ipynb  06_benchmark.ipynb  audit_dev.ipynb  benchmark_config.xml  benchmark_config.yaml  comparison_dev.ipynb  data_exploration.ipynb  experiment_config.xml  experimentation_demo.ipynb  quick_example.ipynb  results.csv  simple_comparison.ipynb
skfair/: __init__.py
skfair/audit/: __init__.py  _bias_auditor.py  _fairness_auditor.py  _plots.py
skfair/comparison/: __init__.py  _plots.py  _report.py  _utils.py
skfair/datasets/: __init__.py  _adult.py  _compas.py  _german.py  _heart_disease.py  _preprocessing.py  _ricci.py
skfair/datasets/data/: adult.csv
skfair/experimentation/: __init__.py  _config_parser.py  _experiment.py  _registry.py  _runner.py  _xml_parser.py
skfair/metrics/: __init__.py  _fairness.py  _performance.py
skfair/preprocessing/: __init__.py  _base.py  _disparate_impact_remover.py  _drop_columns.py  _fair_smote.py  _fairbalance.py  _fairbalance_classifier.py  _fairmask.py  _fairway.py  _fawos.py  _fos.py  _heterogeneous_fos.py  _intersectional.py  _learning_fair_representations.py  _massaging.py  _optimized_preprocessing.py  _reweighing.py  _reweighing_classifier.py  _sampler_utils.py
tests/: conftest.py
tests/test_experimentation/: test_config_parser.py  test_experiment.py  test_runner.py  test_xml_parser.py
tests/test_metrics/: test_fairness.py  test_performance.py
tests/test_preprocessing/: test_edge_cases.py  test_fair_smote.py  test_fairbalance.py  test_fairbalance_classifier.py  test_fairmask.py  test_fairway.py  test_fawos.py  test_fos.py  test_geometric_repair.py  test_heterogeneous_fos.py  test_intersectional.py  test_learning_fair_representations.py  test_massaging.py  test_optimized_preprocessing.py  test_pipeline_integration.py  test_reweighing.py  test_reweighing_classifier.py  test_sklearn_compat.py
user_guide/preprocessing/: index.html
