[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-fair"
version = "0.0.1"
description = "Fairness-aware tools with a scikit-learn compatible API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Your Name" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# FIX 1: Added pandas and moved imbalanced-learn to core dependencies
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.3,<2.0",
  "imbalanced-learn>=0.12",
  "cvxpy>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "mypy>=1.7"]

[project.urls]
Homepage = "https://example.com/scikit-fair"
Repository = "https://example.com/scikit-fair.git"
Issues = "https://example.com/scikit-fair/issues"

# FIX 2: Changed "src" to "." because your folder is ./skfair
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "papers*"]  # Good practice to exclude non-code folders
namespaces = false

[tool.setuptools]
include-package-data = true

# FIX 3: Updated pythonpath to look in current directory
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
exclude = ["examples"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
files = ["skfair"]