[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-fair"
version = "0.0.1"
description = "Fairness-aware tools with a scikit-learn compatible API"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "João Figueiredo", email = "jmfigueiredo03@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# FIX 1: Added pandas and moved imbalanced-learn to core dependencies
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.3,<2.0",
  "imbalanced-learn>=0.12",
  "cvxpy>=1.3",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "mypy>=1.7"]

[project.urls]
Homepage = "https://github.com/jmcfig/scikit-fair"
Repository = "https://github.com/jmcfig/scikit-fair"
Issues = "https://github.com/jmcfig/scikit-fair/issues"
Documentation = "https://jmcfig.github.io/scikit-fair/"

# FIX 2: Changed "src" to "." because your folder is ./skfair
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "papers*"]  # Good practice to exclude non-code folders
namespaces = false

[tool.setuptools]
include-package-data = true

# FIX 3: Updated pythonpath to look in current directory
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
exclude = ["examples"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
files = ["skfair"]